# gameroom

./: .gitignore  CMakeLists.txt
grf/: CMakeLists.txt
include/: grf.h
minefield/: CMakeLists.txt  main.c
minefield/res/: resource.rc
res/: resource.rc
src/: appwindow.c  appwindow.h  grf.c  grf.h  main.c
